# RAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  REFERENTIEL_CANDIDAT_LIBRE.md  pytest.ini
services/rag-pedago/: AGENTS.md  Makefile  README.md  pyproject.toml
services/rag-pedago/agents/: __init__.py  base.py  level_agent.py  orchestrator.py  subject_agent.py
services/rag-pedago/configs/: cleanup_policy.yml  make_target_safety.yml  metadata_governance_chain.yml  metadata_review_handoff.yml  pedago_interface_contract.yml  pilot_corpus_scope.yml  retrieval_metadata_eval.yml  source_admission_policy.yml  transition_authorization.yml
services/rag-pedago/data/acquisition/: couverture_lot10.md  couverture_lot11.md  dossier_revue_4_3a.md  dossier_revue_lot5.md  dossier_revue_lot6.md  pilot_terminale_plan.yml
services/rag-pedago/data/chunks/: grand_oral_expression_orale.jsonl  grand_oral_transversalite.jsonl  mathematiques_continuite.jsonl  mathematiques_convexite.jsonl  mathematiques_derivation.jsonl  mathematiques_limites.jsonl  mathematiques_suites.jsonl  nsi_arbres.jsonl  nsi_files.jsonl  nsi_graphes.jsonl  nsi_listes.jsonl  nsi_piles.jsonl  philosophie_droit.jsonl  philosophie_etat.jsonl  philosophie_justice.jsonl  philosophie_liberte.jsonl
services/rag-pedago/data/embeddings/: REVIEW.ok  review_manifest.json
services/rag-pedago/data/programmes/: couverture_referentiel.md  registre_programmes.yml
services/rag-pedago/data/reference/: official_sources.yml  options.yml
services/rag-pedago/data/reports/: README.md  codex_lot_10_official_reference_quality.md  codex_lot_12_5_review_hardening.md  codex_lot_12_manifest_review_approval.md  codex_lot_13_review_audit_ledger.md  codex_lot_14_agent_ready_architecture.md  codex_lot_14_audit_before_commit.md  codex_lot_15A_state_map_and_pilot_protocol.md  codex_lot_15C_real_manifest_preparation_kit.md  codex_lot_15D_offline_manifest_compiler.md  codex_lot_15E_metadata_only_rehearsal.md  codex_lot_15F_real_draft_guard.md  codex_lot_15G_human_unlock_guard.md  codex_lot_15H_real_draft_unlock_gate.md  codex_lot_16B_cleanup_policy_dry_run.md  codex_lot_16D_cleanup_review_package.md  codex_lot_17E_pedago_interface_contract.md  codex_lot_17H_controlled_readiness.md  codex_lot_17I_transition_authorization.md  codex_lot_17J_metadata_governance_chain.md  codex_lot_1_socle.md  codex_lot_2_5_schema_consolidation.md  codex_lot_3_5_ledger_hardening.md  codex_lot_3_ledger_sqlite.md  codex_lot_6_5_manifest_coverage.md  codex_lot_6_manifest_readiness.md  codex_lot_7_manifest_gate.md  codex_lot_8_controlled_manifest_import.md  codex_lot_9_5_official_reference_integrity.md
services/rag-pedago/data/sources/: notion_articles.yml  registre_sources.yml
services/rag-pedago/docs/: CLEANUP_DECISION_PROTOCOL.md  CLEANUP_POLICY.md  CLEANUP_REVIEW_PROTOCOL.md  CONTROLLED_IMPORT.md  LEDGER_DESIGN.md  LOT_STATUS.md  MAKE_TARGET_SAFETY_PROTOCOL.md  MANIFEST_COVERAGE.md  MANIFEST_GATE.md  MANIFEST_QUALITY_POLICY.md  MANIFEST_READINESS.md  MANIFEST_REVIEW_HARDENING.md  METADATA_PREFLIGHT_PROTOCOL.md  OFFICIAL_PROFILES_FIXTURES.md  OFFICIAL_REFERENCE_EXPLAINABILITY.md  OFFICIAL_REFERENCE_INTEGRITY.md  OFFICIAL_REFERENCE_MODEL.md  OFFICIAL_REFERENCE_QUALITY.md  OFFICIAL_REFERENCE_RESOLVER.md  PILOT_CORPUS_PROTOCOL.md  REAL_MINIMAL_DRAFT_PROTOCOL.md  SOURCE_ADMISSION_POLICY_PROTOCOL.md  TAXONOMY_POLICY.md  TRANSITION_AUTHORIZATION_PROTOCOL.md  WORKFLOWS.md
services/rag-pedago/docs/contracts/: README.md  invariants.yml  pipeline_contract.yml  runtime_artifacts.yml
services/rag-pedago/infra/: docker-compose.pgvector.yml
services/rag-pedago/query_agents/: __init__.py  base.py  query_level_agent.py  query_orchestrator.py  query_subject_agent.py
services/rag-pedago/rag_pedago/: __init__.py  paths.py  project_doctor.py
services/rag-pedago/rag_pedago/imports/: README.md  approve_review_cli.py  controlled_import.py  controlled_import_cli.py  coverage.py  coverage_report.py  gate.py  gate_report.py  manifest.py  (+11 more)
services/rag-pedago/schema/: __init__.py  document.py  retrieval.py  student_profile.py  taxonomy.py
services/rag-pedago/scrapers/: __init__.py  discovery.py  embedding_utils.py  fetch.py  pilot_fetch.py  programme_fetcher.py  programme_parser.py  subpage_extractor.py  taxonomy_fetcher.py  wikiversity.py
services/rag-pedago/scripts/: build_chunks.py  build_correspondence.py  build_embeddings.py  build_referentiel_report.py  build_review_manifest.py  cleanup_decision_draft.py  cleanup_dry_run.py  doctor.py  human_source_review_audit.py  index_pgvector.py  pedago_interface_contract_audit.py  source_admission_policy_audit.py  transition_authorization_audit.py  validate_taxonomy.py
services/rag-pedago/taxonomy/: README.md
services/rag-pedago/tests/: README.md  test_project_scaffold.py
(+859 files in other folders)
